--- a/src/components/Product Card/productcard.css
+++ b/src/components/Product Card/productcard.css
@@ -1,15 +1,13 @@
-
 .wrapper {
-  width: 300px;
+  width: 400px;
   height: 500px;
-  background: white;
-  margin: auto;
-  position: relative;
+  background: #BFB6AD;
   overflow: hidden;
   border-radius: 10px 10px 10px 10px;
   box-shadow: 0;
   transform: scale(0.95);
   transition: box-shadow 0.5s, transform 0.5s;
+
   &:hover {
     transform: scale(1);
     box-shadow: 5px 20px 30px rgba(0, 0, 0, 0.2);
@@ -17,44 +15,50 @@
 
   .container {
     width: 100%;
-    height: 100%;
-    position: relative;
-    
+    height: 95%;
+
+
     .top {
       height: 80%;
       width: 100%;
-     
-      -webkit-background-size: 100%;
-      -moz-background-size: 100%;
-      -o-background-size: 100%;
-      background-size: 100%;
+
+
     }
+
     .bottom {
       width: 200%;
       height: 20%;
       transition: transform 0.5s;
+
       &.clicked {
         transform: translateX(-50%);
       }
+
       h1 {
         margin: 0;
         padding: 0;
       }
+
       p {
         margin: 0;
         padding: 0;
       }
+
       .left {
         height: 100%;
         width: 50%;
         background: #d8b986;
         position: relative;
         float: left;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
         .details {
           padding: 5px;
-          float: left;
-          width: calc(70% - 40px);
+          width: calc(80% - 10px);
         }
+
         .buy {
           float: right;
           width: calc(30% - 2px);
@@ -62,58 +66,69 @@
           background: #f1f1f1;
           transition: background 0.5s;
           border-left: solid thin rgba(0, 0, 0, 0.1);
+
           i {
             font-size: 30px;
             padding: 30px;
             color: #254053;
             transition: transform 0.5s;
           }
+
           &:hover {
             background: #a6cdde;
           }
+
           &:hover i {
             transform: translateY(5px);
             color: #00394b;
           }
         }
       }
+
       .right {
         width: 50%;
-        background: #2b4c28;
+        background: #28901f;
         color: white;
-        
+
         height: 200%;
         overflow: hidden;
+
         .details {
           padding: 20px;
-          float: right;
-          width: calc(70% - 40px);
+          float: none;
+          width: calc(70% - 10px);
         }
+
         .done {
           width: calc(30% - 2px);
           float: left;
           transition: transform 0.5s;
           border-right: solid thin rgba(255, 255, 255, 0.3);
           height: 50%;
+
           i {
             font-size: 30px;
             padding: 30px;
             color: white;
           }
         }
+
         .remove {
           width: calc(30% - 1px);
           clear: both;
           border-right: solid thin rgba(255, 255, 255, 0.3);
           height: 60%;
-          background: #bc3b59;
+          background: #d02102;
           transition: transform 0.5s, background 0.5s;
+
           &:hover {
-            background: #9b2847;
+            background: #9f0404;
           }
+
           &:hover i {
             transform: translateY(5px);
           }
+
           i {
             transition: transform 0.5s;
             font-size: 30px;
@@ -121,7 +136,9 @@
             color: white;
           }
         }
+
         &:hover {
+
           .remove,
           .done {
             transform: translateY(-100%);
@@ -142,6 +159,7 @@
     border-radius: 0px 0px 200px 200px;
     transition: all 0.5s, border-radius 2s, top 1s;
     overflow: hidden;
+
     .icon {
       position: absolute;
       right: 85px;
@@ -149,45 +167,54 @@
       color: white;
       opacity: 1;
     }
+
     &:hover {
       width: 100%;
       right: 0;
       top: 0;
       border-radius: 0;
       height: 80%;
+
       .icon {
         opacity: 0;
         right: 15px;
         top: 15px;
       }
+
       .contents {
         opacity: 1;
         transform: scale(1);
         transform: translateY(0);
       }
     }
+
     .contents {
-        padding: 5%;
-        opacity: 0;
-        transform: scale(0.5);
-        transform: translateY(-200%);
-        transition: opacity 0.2s, transform 0.8s;
-        display: flex; /* Use Flexbox for alignment */
-        flex-direction: column; /* Stack children vertically */
-        align-items: center; /* Center children horizontally */
-        justify-content: center; /* Center children vertically */
-        text-align: center; /* Center text inside the flex container */
-      
-        h1,
-        p {
-          color: white;
-        }
-      
-        p {
-          font-size: 13px;
-          justify-content: center;
-        }
+      padding: 5%;
+      opacity: 0;
+      transform: scale(0.5);
+      transform: translateY(-200%);
+      transition: opacity 0.2s, transform 0.8s;
+      display: flex;
+      /* Use Flexbox for alignment */
+      flex-direction: column;
+      /* Stack children vertically */
+      align-items: center;
+      /* Center children horizontally */
+      justify-content: center;
+      /* Center children vertically */
+      text-align: center;
+      /* Center text inside the flex container */
+
+      h1,
+      p {
+        color: white;
       }
-      
+
+      p {
+        font-size: 13px;
+        justify-content: center;
+      }
+    }
+
   }
 }
